// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search displays loading spinner when searching 1`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-form-group "
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Enter a health related query
    </label>
    <span
      class="nhsuk-hint"
    >
      e.g What is an HRT PPC?
    </span>
    <input
      aria-describedby="search-input-hint"
      aria-invalid="false"
      class="nhsuk-input "
      id="search-input"
      name="search"
      placeholder="type something here"
      type="text"
      value="what is an HRT PPC"
    />
  </div>
  <a
    class="nhsuk-button   "
    id="submit"
  >
    Submit
  </a>
</div>
`;

exports[`Search displays loading spinner when searching 2`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-form-group "
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Rhowch gwestiwn sy'n ymwneud â iechyd
    </label>
    <span
      class="nhsuk-hint"
    >
      e.e. Beth yw HRT PPC?
    </span>
    <input
      aria-describedby="search-input-hint"
      aria-invalid="false"
      class="nhsuk-input "
      id="search-input"
      name="search"
      placeholder="teipiwch rhywbeth yma"
      type="text"
      value="what is an HRT PPC"
    />
  </div>
  <a
    class="nhsuk-button   "
    id="submit"
  >
    Cyflwyno
  </a>
</div>
`;

exports[`Search displays loading spinner when searching 3`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-form-group "
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Cuir fiosrachadh a bhaineas ri slàinte
    </label>
    <span
      class="nhsuk-hint"
    >
      e.g. Dè tha PPC HRT?
    </span>
    <input
      aria-describedby="search-input-hint"
      aria-invalid="false"
      class="nhsuk-input "
      id="search-input"
      name="search"
      placeholder="cuir rudeigin an seo"
      type="text"
      value="what is an HRT PPC"
    />
  </div>
  <a
    class="nhsuk-button   "
    id="submit"
  >
    Cuir ris
  </a>
</div>
`;

exports[`Search rendered component should match snapshot (cy) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Rhowch gwestiwn sy'n ymwneud â iechyd
      </label>
      <span
        class="nhsuk-hint"
      >
        e.e. Beth yw HRT PPC?
      </span>
      <input
        aria-describedby="search-input-hint"
        aria-invalid="false"
        class="nhsuk-input "
        id="search-input"
        name="search"
        placeholder="teipiwch rhywbeth yma"
        type="text"
        value=""
      />
    </div>
    <a
      class="nhsuk-button   "
      id="submit"
    >
      Cyflwyno
    </a>
  </div>
</div>
`;

exports[`Search rendered component should match snapshot (en) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Enter a health related query
      </label>
      <span
        class="nhsuk-hint"
      >
        e.g What is an HRT PPC?
      </span>
      <input
        aria-describedby="search-input-hint"
        aria-invalid="false"
        class="nhsuk-input "
        id="search-input"
        name="search"
        placeholder="type something here"
        type="text"
        value=""
      />
    </div>
    <a
      class="nhsuk-button   "
      id="submit"
    >
      Submit
    </a>
  </div>
</div>
`;

exports[`Search rendered component should match snapshot (gd) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Cuir fiosrachadh a bhaineas ri slàinte
      </label>
      <span
        class="nhsuk-hint"
      >
        e.g. Dè tha PPC HRT?
      </span>
      <input
        aria-describedby="search-input-hint"
        aria-invalid="false"
        class="nhsuk-input "
        id="search-input"
        name="search"
        placeholder="cuir rudeigin an seo"
        type="text"
        value=""
      />
    </div>
    <a
      class="nhsuk-button   "
      id="submit"
    >
      Cuir ris
    </a>
  </div>
</div>
`;
